<!--
  ~ *************************************************************
  ~ 文件：strings.xml  模块：main-app  项目：ThirdApp
  ~ 当前修改时间：2019年07月30日 18:05:03
  ~ 上次修改时间：2019年07月30日 18:04:20
  ~ 作者：Cody.yi   https://github.com/codyer
  ~
  ~ 描述：main-app
  ~ Copyright (c) 2019
  ~ 本代码只用作学习用途，如用于非法途径，本人概不负责
  ~ *************************************************************
  -->

<resources>
    <string name="app_name">MainApp</string>
    <string name="action_settings">一键执行</string>
    <string name="step">请执行第%d步操作</string>
    <string name="step1_debug">1、复制第三方应用\n(debug)</string>
    <string name="step1_release">1、复制第三方应用\n(release)</string>
    <string name="step2">2、安装第三方应用</string>
    <string name="step3">3、解压第三方数据</string>
    <string name="step4">4、复制第三方数据</string>
    <string name="step5">5、改变数据读写权限</string>
    <string name="no_root_right">没有ROOT权限无法执行下面操作\n\n请打开应用的Root权限</string>
    <string name="copy_right">Copyright © 2019 — Cody.yi</string>
</resources>
